# tic-tac-toe

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ttt.c  ttt.cpp  ttt.h  vcpkg.json
shaders/: mask.fs
